<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.20">
  <DUT Name="ST_internalSQLError" Id="{2b251c0a-3d77-4cf1-b06c-759ee9543561}">
    <Declaration><![CDATA[TYPE ST_internalSQLError :
STRUCT
	sSQLState : STRING(5);
	dummy : ARRAY [0..1] OF BYTE;
	nSQLErrorCode : DINT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>